# single-core-plaftform

./: .gitignore  LICENSE  PLATFORM_ENGINEERING.md  R.MD  README.md  context.md  convert.cjs  cspell.json  eslint.config.js  index.html  package-lock.json  package.json  render.yaml  resize.py  setup_scl_aggregator.ps1  tailwind.config.js  vite.config.js
.github/workflows/: aggregator-node-ci.yml  ci.yml  codeql.yml  (+3 more)
public/: deployment-hero.webm  hero-curve.webm  robots.txt
scl-aggregator/: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  context.md  docker-compose.yml  package-lock.json  package.json
scl-aggregator/apps/cache/: Dockerfile  pyproject.toml
scl-aggregator/apps/cache/.chroma_cache/: chroma.sqlite3
scl-aggregator/apps/cache/cache_app/: main.py
scl-aggregator/apps/cache/tests/: test_service.py
scl-aggregator/apps/gateway/: Cargo.toml  Dockerfile  README.md
scl-aggregator/apps/gateway/src/: config.rs  main.rs  proxy.rs
scl-aggregator/apps/gateway/src/handlers/: chat.rs  health.rs  keys.rs  messages.rs  mod.rs  models.rs
scl-aggregator/apps/gateway/src/middleware/: auth.rs  logging.rs
scl-aggregator/apps/router/: README.md  pyproject.toml
scl-aggregator/apps/router/app/: cache.py  main.py  models.py  routing.py
scl-aggregator/apps/router/router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scl-aggregator/apps/router/tests/: test_routing.py
scripts/: generate-sitemap.mjs  prerender.mjs  sitemap-config.mjs  test-rc-flow.mjs
singlecore-compliance-platform/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.jsx  index.css  main.jsx
(+120 files in other folders)
